# cv

./: .gitignore  Makefile  README.md  prek.toml  pyproject.toml
cv/: build.py  original.md  run.py  settings.py
data/: content.yaml  content_template.yaml  resume.yaml
data/profiles/: default.yaml  ml_short.yaml
scripts/: build.py  serve.py
templates/default/: components.typ  content.json  main.typ
templates/mckinsey/: components.typ  main.typ
